<resources>
    <string name="app_name">Đấu nối Online</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="action_logout">Logout</string>
    <string name="msg_enter_mobile">ĐĂNG NHẬP</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Số điện thoại</string>
    <string name="lbl_next">Lấy mã OTP</string>
    <string name="msg_sit_back"></string>
    <string name="msg_manual_otp"></string>
    <string name="lbl_enter_otp">Nhập mã OTP</string>
    <string name="lbl_submit">Xác nhận</string>


    <string name="desc">App Logo</string>
    <string name="noicap_prompt">Nơi cấp</string>
    <string name="doituong_prompt">Đối tượng</string>
    <string name="tinh_prompt">Tỉnh/TP</string>
    <string name="huyen_prompt">Quận/huyện</string>
    <string name="xa_prompt">Phường/xã</string>

    <string name="agreement">Tôi đồng ý với các điều khoản quy định</string>
    <string name="clear_pad">Ký lại</string>
    <string name="save_signature">Lưu</string>
    <string name="compress_signature">Scale</string>

    <string name="yeucaucapnhat">Đã có phiên bản mới !</string>
    <string name="capnhat">Cập nhật</string>
    <string name="dauso">Đầu số</string>

</resources>
